--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,11 @@
   margin-left: 20%;
   color: #f2dd1d
 }
+.productrating{
+  list-style-type: none;
+  color: gray;
+  
+}
 .textfooter{
   color: white;
 }
@@ -187,3 +192,24 @@
   padding: 0;
 }
 
+/* rating */
+.starrating > input {display: none;}  /* Remove radio buttons */
+
+.starrating > label:before { 
+  content: "\f005"; /* Star */
+  margin: 2px;
+  font-size: 2em;
+  font-family: FontAwesome;
+  display: inline-block; 
+}
+
+.starrating > label
+{
+  color: #222222; /* Start color when not clicked */
+}
+
+.starrating > input:checked ~ label
+{ color: #ffca08 ; } /* Set yellow color when star checked */
+
+.starrating > input:hover ~ label
+{ color: #ffca08 ;  } /* Set yellow color when star hover */
