--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,8 @@
 }
 .carousel-inner img {
   width: 100%;
- 
+  height: 30%;
 }
-
-.carousel-caption {
-  background-color: #282828;
-  opacity: 0.75;
-  padding: 10px;
-  bottom: 90px;
-  text-align: center;
-  color: white;
-  font-family: cursive;
-}
-
 
 .navbar {
   width: 100%;
@@ -91,6 +80,7 @@
 .rating {
   list-style-type: none;
   margin-left: 20%;
+  margin-right: 25%;
   color: #f2dd1d
 }
 .productrating{
@@ -106,90 +96,13 @@
   vertical-align: text-top;
 }
 
-.card1 {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background-color: lightskyblue;
-  padding-bottom: 0px;
-  padding-top: 10px;
-  margin-top: 50px;
-}
-
-.card2 {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  height: 130px;
-  background-color: lightgrey;
-  padding-bottom: 0px;
-  padding-top: 20px;
-  margin-bottom: 50px;
-  position: relative
-}
-
-.left-side {
-  height: 100%
-}
-
-.btn-pink {
-  background: #FF5252;
-  font-size: 16px;
-  color: #fff;
-  width: 150px;
-  height: 40px;
-  border: 1px solid #FF5252;
-  text-transform: uppercase;
-  margin-top: 20px
-}
-
-.btn-pink:hover {
-  background: #F44336;
-  color: #fff
-}
-
-
-.fit-image {
-  width: 100%;
-  object-fit: cover
-}
-
-.girl-img {
-  height: 320px;
-  width: 200px
-}
-
-.blocks {
-  position: absolute;
-  top: -100px;
-  background-color: #fff;
-  color: #000
-}
-
-.img-block {
-  width: 130px;
-  height: 170px;
-  cursor: pointer
-}
-
-@media screen and (max-width: 768px) {
-  .card2 {
-      height: 160px
-  }
-
-  .blocks {
-      top: -8px
-  }
-
-  .img-block {
-      width: 80px;
-      height: 100px;
-      margin-bottom: 5px
-  }
-}
-
 .contact-form{
   max-width: 1170px;
   margin: auto auto;
   padding: 0;
+}
+form .error {
+  color: #ff0001;
 }
 
 /* rating */
@@ -213,3 +126,130 @@
 
 .starrating > input:hover ~ label
 { color: #ffca08 ;  } /* Set yellow color when star hover */
+.imgcard {
+  height: 200px;
+  width: 100%;
+}
+/* 
+.item {
+  padding-left: 5px;
+  padding-right: 5px;
+} */
+
+.item-card3 {
+  margin-left: 2%;
+  position: relative;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.card3:hover {
+  transform: scale(1.05);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+}
+/* .scollerhide{
+  margin-right: unset !important;
+  margin-left: unset !important;
+  overflow: hidden;
+} */
+
+.badge { 
+  position: relative; 
+  top: -20px; 
+  border: 1px solid black; 
+  border-radius: 50%; 
+ }
+
+ 
+#cart-container {
+  float: right;
+  width: 210px;
+  position: relative;
+}
+
+#itemCount {
+  position: absolute;
+  display: none;
+  top: -10px;
+  left: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+  text-align: center;
+}
+/* 
+.item {
+  width: 31%;
+  float: left;
+  margin: 1%;
+} */
+
+.itemText p {
+  margin-bottom: 20px;
+}
+
+.price-container {
+  margin-top: 20px;
+}
+
+i:hover {
+  cursor: pointer;
+}
+
+#shoppingCart {
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: none;
+  position: absolute;
+  z-index: 9999;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+#cartItemsContainer {
+  position: relative;
+  width: 600px;
+  left: 50%;
+  top: 150px;
+  margin-left: -300px;
+  padding: 40px;
+  box-shadow: 0 0 10px black;
+  background: #e9e9e9;
+  overflow: auto;
+}
+
+#cartItemsContainer i {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+#cartItemsContainer .itemDetails {
+  overflow: auto;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+#cartItemsContainer .itemImage {
+  float: left;
+  width: 260px;
+  padding: 0 40px;
+}
+
+#cartItemsContainer .itemText {
+  float: right;
+  width: 260px;
+  padding: 0 40px;
+}
+
+#cartItemsContainer .itemText .price-container {
+  margin-top: 0;
+}
+
+.removeItem {
+  margin-left: 40px;
+  margin-top: 10px;
+}
